--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.8.7",
     "@walletconnect/web3-provider": "^1.7.8",
     "next": "12.2.0",
+    "node-fetch": "^3.2.6",
     "opensea-js": "^4.0.4",
     "query-string": "^7.1.1",
     "react": "18.2.0",
