feat: add api rate limiter

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
     "@walletconnect/web3-provider": "^1.7.8",
+    "lru-cache": "^7.12.0",
     "next": "12.2.0",
     "node-fetch": "^3.2.6",
     "opensea-js": "^4.0.4",
@@ -23,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-number-format": "^4.9.3",
+    "react-toastify": "^9.0.5",
     "throttle-debounce": "^5.0.0",
     "web3": "^1.7.4",
     "web3modal": "^1.9.8"
@@ -36,17 +38,17 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
     "@types/jest": "^28.1.4",
-    "@types/testing-library__jest-dom": "^5.14.5",
-    "@types/testing-library__react": "^10.2.0",
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/testing-library__jest-dom": "^5.14.5",
+    "@types/testing-library__react": "^10.2.0",
     "@types/throttle-debounce": "^5.0.0",
     "babel-jest": "^28.1.2",
-    "jest": "^28.1.2",
-    "jest-environment-jsdom": "^28.1.2",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
+    "jest": "^28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
     "react-test-renderer": "^18.2.0",
     "ts-jest": "^28.0.5",
     "ts-node": "^10.8.2",
